--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
   - sudo apt-get -y install gcc-10
 
 script:
-  - g++ --version
-  - g++ main.cpp -I include -std=c++17 -O1 -Wall -Wextra -pedantic
+  - g++-10 --version
+  - g++-10 main.cpp -I include -std=c++17 -O1 -Wall -Wextra -pedantic
