--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Build Main
+        run: g++ main.cpp -I include -std=c++17 -Wall -Wextra -pedantic -Werror
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
