--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build main (gcc)
-        run: g++ --version && g++ main.cpp -I include -std=c++17 -Wall -Wextra -pedantic -Werror
+        run: g++ --version && g++ main.cpp -I include -std=c++17 -Wall -Wextra -pedantic -Wshadow -Werror
 
       - name: Build main (clang++)
-        run: clang++ --version && clang++ main.cpp -I include -std=c++17 -Wall -Wextra -pedantic -Werror
+        run: clang++ --version && clang++ main.cpp -I include -std=c++17 -Wall -Wextra -pedantic -Wshadow -Werror
+
+      - name: Static analysis
+        run: clang-tidy --version
