--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: clang-tidy
-        run: clang-tidy --version && clang-tidy main.cpp -- -I include -std=c++17
+        run: clang-tidy --version && clang-tidy -checks="*" main.cpp -- -I include -std=c++17
