--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: doxygen
-        run: sudo apt-get install -y doxygen && doxygen --version && doxygen .doxygen  
+        run: sudo apt-get install -y doxygen && doxygen --version && doxygen -g .doxygen && cat .doxygen  
