--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: clang-tidy
-        run: clang-tidy --version && clang-tidy -checks="*" main.cpp -- -I include -std=c++17
+        run: clang-tidy --version && clang-tidy -warnings-as-errors -checks="*" main.cpp -- -I include -std=c++17
 
   documentation:
     runs-on: ubuntu-latest
