--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: g++
-        run: g++ --version && g++ main.cpp -I include -std=c++17 -Wall -Wextra -pedantic -Wshadow -Werror
+        run: g++ --version && g++ main.cpp -I include -std=c++17 -O2 -Wall -Wextra -pedantic -Wshadow -Werror
 
       - name: clang++
-        run: clang++ --version && clang++ main.cpp -I include -std=c++17 -Wall -Wextra -pedantic -Wshadow -Werror
+        run: clang++ --version && clang++ main.cpp -I include -std=c++17 -O2 -Wall -Wextra -pedantic -Wshadow -Werror
 
   static_analysis:
     runs-on: ubuntu-latest
@@ -26,4 +26,13 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: clang-tidy
-        run: clang-tidy --version && clang-tidy -checks="*" main.cpp -- -I include -std=c++17
+        run: clang-tidy --version && clang-tidy -warnings-as-errors -checks="*" main.cpp -- -I include -std=c++17
+
+  documentation:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: doxygen
+        run: sudo apt-get install -y doxygen && doxygen --version && doxygen .doxygen  
