--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: clang-tidy
-        run: clang-tidy include/constexpr_hash_map/constexpr_hash_map.hpp main.cpp -- -I include -std=c++17
+        run: clang-tidy include/constexpr_hash_map/constexpr_hash_map.hpp main.cpp --checks=* --warnings-as-errors -- -I include -std=c++17
 
   documentation:
     runs-on: ubuntu-latest
