--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,13 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: g++
-        run: g++ --version && \
+        run: |
+             g++ --version && \
              g++ main.cpp -I include -std=c++17 -O2 -Wall -Wextra -pedantic -Wshadow -Werror
 
       - name: clang++
-        run: clang++ --version && \
+        run: |
+             clang++ --version && \
              clang++ main.cpp -I include -std=c++17 -O2 -Wall -Wextra -pedantic -Wshadow -Werror
 
   static_analysis:
@@ -28,7 +30,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: clang-tidy
-        run: clang-tidy --version && \
+        run: |
+             clang-tidy --version && \
              clang-tidy include/constexpr_hash_map/constexpr_hash_map.hpp main.cpp --checks="*,-llvmlibc-*,-modernize-use-trailing-return-type" --warnings-as-errors="*" -- -I include -std=c++17
 
   documentation:
